# lcms-toolkit

./: .gitignore  LICENSE  README.md  analyze.py  run_demo.py  setup.sh
core/: CMakeLists.txt
core/bindings/: python_bindings.cpp
core/cmake/: lcms_coreConfig.cmake.in
core/include/lcms/: chromatogram.hpp  feature_map.hpp  lcms.hpp  ms_experiment.hpp  parallel.hpp  peak.hpp  spectrum.hpp  types.hpp
core/include/lcms/algorithms/: baseline_correction.hpp  isotope_detection.hpp  peak_picking.hpp  quantification.hpp  smoothing.hpp  spectral_matching.hpp
core/include/lcms/io/: base64.hpp  indexed_reader.hpp  mzml_reader.hpp  mzxml_reader.hpp
core/src/: base64.cpp  chromatogram.cpp  feature_map.cpp  indexed_reader.cpp  isotope_detection.cpp  ms_experiment.cpp  mzml_reader.cpp  mzxml_reader.cpp  parallel.cpp  peak.cpp  quantification.cpp  spectral_matching.cpp  spectrum.cpp
core/tests/: CMakeLists.txt  test_base64.cpp  test_chromatogram.cpp  test_isotope_detection.cpp  test_peak.cpp  test_spectral_matching.cpp  test_spectrum.cpp
examples/: cpp_example.cpp  python_example.py
java/: pom.xml
python/: setup.py
python/pylcms/: __init__.py  algorithms.py  annotation.py  chromatogram.py  cli.py  cloud.py  experiment.py  formats.py  identification.py  io.py  labeling.py  memmap.py  plugins.py  reporting.py  spectrum.py  streaming.py
python/tests/: conftest.py  test_annotation.py  test_identification.py  test_isotope.py  test_labeling.py  test_plugins.py  test_quantification.py  test_rt_prediction.py  test_spectral_matching.py  test_spectrum.py  test_statistics.py
(+28 files in other folders)
